--- a/client/src/components/Header/header.module.scss
+++ b/client/src/components/Header/header.module.scss
@@ -49,7 +49,7 @@
                 }
             }
 
-            .dropdown-btn {
+            .dropdownBtn {
                 color: $black;
             }
         }
@@ -69,7 +69,7 @@
         align-items: center;
     }
 
-    .dropdown-btn {
+    .dropdownBtn {
         background-color: transparent;
         border: 0;
 
@@ -79,7 +79,7 @@
         }
     }
 
-    .dropdown-btn:focus {
+    .dropdownBtn:focus {
         outline: 0;
     }
 
@@ -105,7 +105,7 @@
 @media #{$mobile} {
 
     .navigation.fixed .nav-item .btn,
-    .navigation.fixed .nav-item .dropdown-btn {
+    .navigation.fixed .nav-item .dropdownBtn {
         color: $white;
     }
 
