--- a/client/public/styles/styles.scss
+++ b/client/public/styles/styles.scss
@@ -77,6 +77,10 @@ blockquote {
     margin-bottom: .68em;
 }
 
+ul {
+    list-style: none;
+}
+
 h1[class],
 h2[class],
 h3[class],
@@ -251,6 +255,71 @@ blockquote:last-child {
         h3 {
             margin-bottom: 10px !important;
             font-size: 22px;
+        }
+    }
+}
+
+/* ------------------------------------------------------------ *\
+	Card
+\* ------------------------------------------------------------ */
+.card {
+    & {
+        margin-bottom: 1.5em;
+    }
+
+    .card-header {
+        & {
+            display: flex;
+            align-items: center;
+            padding: .5rem 1.5rem;
+            min-height: 3.5rem;
+            background-color: $white;
+            border-bottom: 1px solid #e8ebf3;
+        }
+
+        .card-title {
+            font-size: 18px;
+            font-weight: 500;
+        }
+    }
+
+    .card-description {
+        font-family: 'Roboto';
+        font-size: 14px;
+        color: inherit;
+        white-space: pre-line;
+        word-break: break-all;
+    }
+
+    .card-footer {
+        background-color: $white;
+    }
+}
+
+/* ------------------------------------------------------------ *\
+	Section Post View
+\* ------------------------------------------------------------ */
+
+.section-post-view {
+    & {
+        padding: 3rem 0;
+    }
+}
+
+@media #{$mobile} {
+    .section-post-view {
+        & {
+            .col-xl-4 {
+                order: 1;
+            }
+
+            .col-xl-8 {
+                order: 2;
+            }
+
+            .product-latest {
+                display: none;
+            }
         }
     }
 }
